# discord-jtalkbot

./: .env.sample  .gitignore  Dockerfile  LICENSE  MANIFEST.in  Makefile  README  README.md  bitbucket-pipelines.yml  discordbot.py  download.sh  jtalkbot-config.json  jtalkbot-config.sample.json  jtalkbot.py  openjtalk.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  start.sh
discordjtalkbot/: discordjtalkbot.py  environ.py
discordjtalkbot/cogs/: autoreadercog.py
discordjtalkbot/cogs/modules/: openjtalk.py  pyjtalk.py
discordjtalkbot/cogs/modules/files/: discordjtalkbot-config.sample.json
discordjtalkbot/cogs/modules/secret/: secret_bou.py
jtalkbot/: __init__.py  __main__.py  autoreader.py  environ.py  jtalkbot-config.sample.json  openjtalk.py  pyjtalk.py  settings.py  version.py
