[tool.poetry]
name = "discord-bot-heroku"
version = "0.1.0"
description = "ABC"
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "3.6.2"
async-timeout = "3.0.1"
attrs = "20.2.0"
chardet = "3.0.4"
"discord.py" = { version = "^1.5", extras = ["voice"] }
flask = "^1.1.2"
idna = "2.10"
mojimoji = "0.0.11"
multidict = "4.7.6"
python-dotenv = "0.14.0"
PyAudio="0.2.11"
six = ">=1.5"
toml = "0.10.1"
yarl = "1.5.1"

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
# Semi-incomplete due to extras issue.
voice = ["discord.py[voice]"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"