[metadata]
name = jtalkbot
author = Masaaki Shibata
author_email = mshibata@emptypage.jp
description = A discord bot talking Japanese.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://bitbucket.org/emptypage/jtalkbot/
include_package_data = True
keywords = discord
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    discord.py[voice]

[options.entry_points]
console_scripts =
    jtalkbot = jtalkbot.__main__:main
    pyjtalk = jtalkbot.pyjtalk:main
